# WMS

WorkerManagerSystem/: CMakeLists.txt  a.out  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  worker.h  workermanage.cpp  workermanage.h
